Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-30653

With wsrep_mode=REPLICATE_ARIA only part of mixed-engine transactions is replicated

    XMLWordPrintable

Details

    Description

      When updating both an Aria and InnoDB table in a single transaction only the Aria change seems to get replicated to the other nodes, but not the InnoDB ones.

      create table t1 (id serial, val int) engine=innodb;
      create table t2 (id serial, val int) engine=aria;
       
      insert into t1 values(1, 23);
      insert into t2 values(2, 42);
       
      begin;
      update t1 set val=24 where id=1;
      update t2 set val=41 where id=2;
      commit;
      

      The node I ran the transaction shows the expected results:

      MariaDB [test]> select * from t1;
      +----+------+
      | id | val  |
      +----+------+
      |  1 |   24 |
      +----+------+
      1 row in set (0.000 sec)
       
      MariaDB [test]> select * from t2;
      +----+------+
      | id | val  |
      +----+------+
      |  2 |   41 |
      +----+------+
      1 row in set (0.000 sec)
      

      But the other nodes only have the Aria table changed:

      MariaDB [test]> select * from t1;
      +----+------+
      | id | val  |
      +----+------+
      |  1 |   23 |
      +----+------+
      1 row in set (0.000 sec)
       
      MariaDB [test]> select * from t2;
      +----+------+
      | id | val  |
      +----+------+
      |  2 |   41 |
      +----+------+
      1 row in set (0.000 sec)
      

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              hholzgra Hartmut Holzgraefe
              Votes:
              0 Vote for this issue
              Watchers:
              7 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 5.75d
                  5.75d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 4d 1h Time Not Required
                  4d 1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.